# MoriyaUI

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: chat.rs  store.rs
src-tauri/src/models/: store.rs
src/components/: app-sidebar.tsx  message-box.tsx
