[package]
name = "moriyaui"
version = "0.1.0"
description = "A Tauri App"
authors = ["midorin-linux"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moriyaui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.2", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }

